--- a/themes/default/statics/scss/apps/info/style.master.scss
+++ b/themes/default/statics/scss/apps/info/style.master.scss
@@ -329,7 +329,7 @@ main.main-content-container {
                             div.publication-data {
                                 flex: 1;
                                 padding-left: 15px;
-                                overflow: hidden;
+                                // overflow: hidden;
                                 div.publication-data-inner {
                                     div.publication-target {
                                         width: 100%;
